Visibility fixes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -525,7 +525,7 @@ footer.sticky-bottom {
     margin-bottom: 0.5cm;
     margin-top: 1cm;
   }
-  ol.bibliography {
+  ol.presentations {
     list-style: none;
     padding: 0;
     margin-top: 0;
